@@ -107,7 +107,7 @@ static colortype *endcolor = NULL;
 #endif
 
 /* We have an error in some part of the rcfile.  Put it on stderr and
- * make the user hit Return to continue starting up nano. */
+ * make the user hit Enter to continue starting up nano. */
 void rcfile_error(const char *msg, ...)
 {
     va_list ap;
@@ -735,7 +735,7 @@ void parse_rcfile(FILE *rcstream)
 
     if (errors) {
 	errors = FALSE;
-	fprintf(stderr, _("\nPress Return to continue starting nano\n"));
+	fprintf(stderr, _("\nPress Enter to continue starting nano\n"));
 	while (getchar() != '\n')
 	    ;
     }
